5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4189/executions/1752_3092.log
== TEST (2019-05-16 16:19:10) 
-- CODE:
jogo=input("jogo:")
V=3
E=2
D=1
pont=0
while(jogo=="X"):
	if(jogo=="V")
	pont=pont+V
	elif(jogo=="E"):
	pont=pont+E
	elif(jogo=="D"):
	pont=pont+D
	
print(pont)
	
-- ERROR:
File "XXXX", line 7
    if(jogo=="V")
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:19:17) 
-- CODE:
jogo=input("jogo:")
V=3
E=2
D=1
pont=0
while(jogo=="X"):
	if(jogo=="V"):
	pont=pont+V
	elif(jogo=="E"):
	pont=pont+E
	elif(jogo=="D"):
	pont=pont+D
	
print(pont)
	
-- ERROR:
File "XXXX", line 8
    pont=pont+V
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:19:26) 
-- CODE:
jogo=input("jogo:")
V=3
E=2
D=1
pont=0
while(jogo=="X"):
	if(jogo=="V"):
	   pont=pont+V
	elif(jogo=="E"):
	   pont=pont+E
	elif(jogo=="D"):
	   pont=pont+D
	
print(pont)
	
-- ERROR:
File "XXXX", line 8
    pont=pont+V
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:20:06) 
-- CODE:
jogo=input("jogo:")
pont=0
while(jogo=="X"):
	if(jogo=="V"):
	   pont=pont+3
	elif(jogo=="E"):
	   pont=pont+2
	elif(jogo=="D"):
	   pont=pont+1
	
print(pont)
	
-- EXECUTION TIME:
0.143924
-- TEST CASE 1:
---- input:
v
V
e
E
D
D
a
b
c
d
X
---- correct output:
61.9
---- user output:
0
-- TEST CASE 2:
---- input:
V
E
D
C
B
A
X
---- correct output:
66.67
---- user output:
0
-- TEST CASE 3:
---- input:
A
A
A
v
v
V
V
X
---- correct output:
100.0
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:20:08) 
-- CODE:
jogo=input("jogo:")
pont=0
while(jogo=="X"):
	if(jogo=="V"):
	   pont=pont+3
	elif(jogo=="E"):
	   pont=pont+2
	elif(jogo=="D"):
	   pont=pont+1
	
print(pont)
	
-- ERROR:
File "XXXX", line 8
    pont=pont+V
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:21:07) 
-- CODE:
jogo=input("jogo:")
pont=0
while(jogo=="X"):
	if(jogo=="V"):
	   pont=pont+3
	elif(jogo=="E"):
	   pont=pont+2
	elif(jogo=="D"):
	   pont=pont+1
	else:
		pont=pont+0
	
print(pont)
	
-- ERROR:
File "XXXX", line 8
    pont=pont+V
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:21:58) 
-- CODE:
jogo=input("jogo:").upper()
pont=0
while(jogo=="X"):
	if(jogo=="V"):
	   pont=pont+3
	elif(jogo=="E"):
	   pont=pont+2
	elif(jogo=="D"):
	   pont=pont+1
	else:
		pont=pont+0
	
print(pont)
	
-- ERROR:
File "XXXX", line 8
    pont=pont+V
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:24:14) 
-- CODE:
jogo=input("jogo:").upper()
pont=0
while(jogo=="X"):
	if(jogo=="V"):
	   pont=pont+3/100
	elif(jogo=="E"):
	   pont=pont+2/100
	elif(jogo=="D"):
	   pont=pont+1/100
	else:
		pont=pont+0
	
   print(round(pont,2)
	
-- ERROR:
File "XXXX", line 13
    print(round(pont,2)
                      ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:25:44) 
-- CODE:
jogo=input("jogo:").upper()
pont=0
while(jogo=="X"):
	if(jogo=="V"):
	   pont=pont+3/100
	elif(jogo=="E"):
	   pont=pont+2/100
	elif(jogo=="D"):
	   pont=pont+1/100
	else:
		pont=pont+0
	
print(round(pont,2)
	
-- EXECUTION TIME:
0.144671
-- ERROR:
  File "/home/codebench/codes/1752/3092/main.py", line 15
    
     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:25:44) 
-- CODE:
jogo=input("jogo:").upper()
pont=0
while(jogo=="X"):
	if(jogo=="V"):
	   pont=pont+3/100
	elif(jogo=="E"):
	   pont=pont+2/100
	elif(jogo=="D"):
	   pont=pont+1/100
	else:
		pont=pont+0
	
print(round(pont,2)
	
-- EXECUTION TIME:
0.131584
-- ERROR:
  File "/home/codebench/codes/1752/3092/main.py", line 15
    
     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:25:44) 
-- CODE:
jogo=input("jogo:").upper()
pont=0
while(jogo=="X"):
	if(jogo=="V"):
	   pont=pont+3/100
	elif(jogo=="E"):
	   pont=pont+2/100
	elif(jogo=="D"):
	   pont=pont+1/100
	else:
		pont=pont+0
	
print(round(pont,2)
	
-- EXECUTION TIME:
0.194057
-- ERROR:
  File "/home/codebench/codes/1752/3092/main.py", line 15
    
     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:25:45) 
-- CODE:
jogo=input("jogo:").upper()
pont=0
while(jogo=="X"):
	if(jogo=="V"):
	   pont=pont+3/100
	elif(jogo=="E"):
	   pont=pont+2/100
	elif(jogo=="D"):
	   pont=pont+1/100
	else:
		pont=pont+0
	
print(round(pont,2)
	
-- EXECUTION TIME:
0.165904
-- ERROR:
  File "/home/codebench/codes/1752/3092/main.py", line 15
    
     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:25:45) 
-- CODE:
jogo=input("jogo:").upper()
pont=0
while(jogo=="X"):
	if(jogo=="V"):
	   pont=pont+3/100
	elif(jogo=="E"):
	   pont=pont+2/100
	elif(jogo=="D"):
	   pont=pont+1/100
	else:
		pont=pont+0
	
print(round(pont,2)
	
-- EXECUTION TIME:
0.279346
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1752/3092/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:25:45) 
-- CODE:
jogo=input("jogo:").upper()
pont=0
while(jogo=="X"):
	if(jogo=="V"):
	   pont=pont+3/100
	elif(jogo=="E"):
	   pont=pont+2/100
	elif(jogo=="D"):
	   pont=pont+1/100
	else:
		pont=pont+0
	
print(round(pont,2)
	
-- EXECUTION TIME:
0.273602
-- ERROR:
  File "/home/codebench/codes/1752/3092/main.py", line 15
    
     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:25:45) 
-- CODE:
jogo=input("jogo:").upper()
pont=0
while(jogo=="X"):
	if(jogo=="V"):
	   pont=pont+3/100
	elif(jogo=="E"):
	   pont=pont+2/100
	elif(jogo=="D"):
	   pont=pont+1/100
	else:
		pont=pont+0
	
print(round(pont,2)
	
-- EXECUTION TIME:
0.249707
-- ERROR:
  File "/home/codebench/codes/1752/3092/main.py", line 15
    
     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:25:46) 
-- CODE:
jogo=input("jogo:").upper()
pont=0
while(jogo=="X"):
	if(jogo=="V"):
	   pont=pont+3/100
	elif(jogo=="E"):
	   pont=pont+2/100
	elif(jogo=="D"):
	   pont=pont+1/100
	else:
		pont=pont+0
	
print(round(pont,2)
	
-- EXECUTION TIME:
0.136712
-- ERROR:
  File "/home/codebench/codes/1752/3092/main.py", line 15
    
     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:25:46) 
-- CODE:
jogo=input("jogo:").upper()
pont=0
while(jogo=="X"):
	if(jogo=="V"):
	   pont=pont+3/100
	elif(jogo=="E"):
	   pont=pont+2/100
	elif(jogo=="D"):
	   pont=pont+1/100
	else:
		pont=pont+0
	
print(round(pont,2)
	
-- EXECUTION TIME:
0.090456
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1752/3092/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:25:46) 
-- CODE:
jogo=input("jogo:").upper()
pont=0
while(jogo=="X"):
	if(jogo=="V"):
	   pont=pont+3/100
	elif(jogo=="E"):
	   pont=pont+2/100
	elif(jogo=="D"):
	   pont=pont+1/100
	else:
		pont=pont+0
	
print(round(pont,2)
	
-- EXECUTION TIME:
0.163231
-- ERROR:
  File "/home/codebench/codes/1752/3092/main.py", line 15
    
     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:25:47) 
-- CODE:
jogo=input("jogo:").upper()
pont=0
while(jogo=="X"):
	if(jogo=="V"):
	   pont=pont+3/100
	elif(jogo=="E"):
	   pont=pont+2/100
	elif(jogo=="D"):
	   pont=pont+1/100
	else:
		pont=pont+0
	
print(round(pont,2)
	
-- EXECUTION TIME:
0.180896
-- ERROR:
  File "/home/codebench/codes/1752/3092/main.py", line 15
    
     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:25:47) 
-- CODE:
jogo=input("jogo:").upper()
pont=0
while(jogo=="X"):
	if(jogo=="V"):
	   pont=pont+3/100
	elif(jogo=="E"):
	   pont=pont+2/100
	elif(jogo=="D"):
	   pont=pont+1/100
	else:
		pont=pont+0
	
print(round(pont,2)
	
-- EXECUTION TIME:
0.180287
-- ERROR:
  File "/home/codebench/codes/1752/3092/main.py", line 15
    
     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:25:47) 
-- CODE:
jogo=input("jogo:").upper()
pont=0
while(jogo=="X"):
	if(jogo=="V"):
	   pont=pont+3/100
	elif(jogo=="E"):
	   pont=pont+2/100
	elif(jogo=="D"):
	   pont=pont+1/100
	else:
		pont=pont+0
	
print(round(pont,2)
	
-- EXECUTION TIME:
0.210093
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1752/3092/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:25:48) 
-- CODE:
jogo=input("jogo:").upper()
pont=0
while(jogo=="X"):
	if(jogo=="V"):
	   pont=pont+3/100
	elif(jogo=="E"):
	   pont=pont+2/100
	elif(jogo=="D"):
	   pont=pont+1/100
	else:
		pont=pont+0
	
print(round(pont,2)
	
-- EXECUTION TIME:
0.197957
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1752/3092/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:25:48) 
-- CODE:
jogo=input("jogo:").upper()
pont=0
while(jogo=="X"):
	if(jogo=="V"):
	   pont=pont+3/100
	elif(jogo=="E"):
	   pont=pont+2/100
	elif(jogo=="D"):
	   pont=pont+1/100
	else:
		pont=pont+0
	
print(round(pont,2)
	
-- EXECUTION TIME:
0.235086
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1752/3092/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:28:48) 
-- CODE:
jogo=input("jogo:").upper()
pont=0
while(jogo=="X"):
	if(jogo=="V"):
	   pont=pont+3/100
	elif(jogo=="E"):
	   pont=pont+2/100
	elif(jogo=="D"):
	   pont=pont+1/100
	else:
		pont=pont+0
	
print(round(pont,2)
	
-- ERROR:
File "XXXX", line 15
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:28:54) 
-- CODE:
jogo=input("jogo:").upper()
pont=0
while(jogo=="X"):
	if(jogo=="V"):
	   pont=pont+3/100
	elif(jogo=="E"):
	   pont=pont+2/100
	elif(jogo=="D"):
	   pont=pont+1/100
	else:
		pont=pont+0
	
print(round(pont,2)
-- ERROR:
File "XXXX", line 14
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:28:57) 
-- CODE:
jogo=input("jogo:").upper()
pont=0
while(jogo=="X"):
	if(jogo=="V"):
	   pont=pont+3/100
	elif(jogo=="E"):
	   pont=pont+2/100
	elif(jogo=="D"):
	   pont=pont+1/100
	else:
		pont=pont+0
	
print(round(pont,2)
-- ERROR:
File "XXXX", line 14
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:29:17) 
-- CODE:
jogo=input("jogo:").upper()
pont=0
while(jogo=="X"):
	if(jogo=="V"):
	   pont=pont+3/100
	elif(jogo=="E"):
	   pont=pont+2/100
	elif(jogo=="D"):
	   pont=pont+1/100
	else:
		pont=pont+0
	
print(round(pont,2)
-- ERROR:
File "XXXX", line 14
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:29:17) 
-- CODE:
jogo=input("jogo:").upper()
pont=0
while(jogo=="X"):
	if(jogo=="V"):
	   pont=pont+3/100
	elif(jogo=="E"):
	   pont=pont+2/100
	elif(jogo=="D"):
	   pont=pont+1/100
	else:
		pont=pont+0
	
print(round(pont,2)
-- ERROR:
File "XXXX", line 14
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:29:17) 
-- CODE:
jogo=input("jogo:").upper()
pont=0
while(jogo=="X"):
	if(jogo=="V"):
	   pont=pont+3/100
	elif(jogo=="E"):
	   pont=pont+2/100
	elif(jogo=="D"):
	   pont=pont+1/100
	else:
		pont=pont+0
	
print(round(pont,2)
-- ERROR:
File "XXXX", line 14
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:29:17) 
-- CODE:
jogo=input("jogo:").upper()
pont=0
while(jogo=="X"):
	if(jogo=="V"):
	   pont=pont+3/100
	elif(jogo=="E"):
	   pont=pont+2/100
	elif(jogo=="D"):
	   pont=pont+1/100
	else:
		pont=pont+0
	
print(round(pont,2)
-- ERROR:
File "XXXX", line 14
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:29:17) 
-- CODE:
jogo=input("jogo:").upper()
pont=0
while(jogo=="X"):
	if(jogo=="V"):
	   pont=pont+3/100
	elif(jogo=="E"):
	   pont=pont+2/100
	elif(jogo=="D"):
	   pont=pont+1/100
	else:
		pont=pont+0
	
print(round(pont,2)
-- ERROR:
File "XXXX", line 14
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:29:18) 
-- CODE:
jogo=input("jogo:").upper()
pont=0
while(jogo=="X"):
	if(jogo=="V"):
	   pont=pont+3/100
	elif(jogo=="E"):
	   pont=pont+2/100
	elif(jogo=="D"):
	   pont=pont+1/100
	else:
		pont=pont+0
	
print(round(pont,2)
-- ERROR:
File "XXXX", line 14
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:29:18) 
-- CODE:
jogo=input("jogo:").upper()
pont=0
while(jogo=="X"):
	if(jogo=="V"):
	   pont=pont+3/100
	elif(jogo=="E"):
	   pont=pont+2/100
	elif(jogo=="D"):
	   pont=pont+1/100
	else:
		pont=pont+0
	
print(round(pont,2)
-- ERROR:
File "XXXX", line 14
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:29:18) 
-- CODE:
jogo=input("jogo:").upper()
pont=0
while(jogo=="X"):
	if(jogo=="V"):
	   pont=pont+3/100
	elif(jogo=="E"):
	   pont=pont+2/100
	elif(jogo=="D"):
	   pont=pont+1/100
	else:
		pont=pont+0
	
print(round(pont,2)
-- ERROR:
File "XXXX", line 14
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:29:18) 
-- CODE:
jogo=input("jogo:").upper()
pont=0
while(jogo=="X"):
	if(jogo=="V"):
	   pont=pont+3/100
	elif(jogo=="E"):
	   pont=pont+2/100
	elif(jogo=="D"):
	   pont=pont+1/100
	else:
		pont=pont+0
	
print(round(pont,2)
-- ERROR:
File "XXXX", line 14
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:29:18) 
-- CODE:
jogo=input("jogo:").upper()
pont=0
while(jogo=="X"):
	if(jogo=="V"):
	   pont=pont+3/100
	elif(jogo=="E"):
	   pont=pont+2/100
	elif(jogo=="D"):
	   pont=pont+1/100
	else:
		pont=pont+0
	
print(round(pont,2)
-- ERROR:
File "XXXX", line 14
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:30:30) 
-- CODE:
jogo=input("jogo:").upper()
pont=0
while(jogo!="X"):
	if(jogo=="V"):
	   pont=pont+3/100
	elif(jogo=="E"):
	   pont=pont+2/100
	elif(jogo=="D"):
	   pont=pont+1/100
	else:
		pont=pont+0
	jogo=input("jogo:")
	
print(round(pont,2)
-- ERROR:
File "XXXX", line 15
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:31:42) 
-- CODE:
jogo=input("jogo:").upper()
pont=0
while(jogo!="X"):
	if(jogo=="V"):
	   pont=pont+3/100
	elif(jogo=="E"):
	   pont=pont+2/100
	elif(jogo=="D"):
	   pont=pont+1/100
	else:
		pont=pont+0
	jogo=input("jogo:")
	
print(round(pont,2)
-- ERROR:
File "XXXX", line 15
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:31:43) 
-- CODE:
jogo=input("jogo:").upper()
pont=0
while(jogo!="X"):
	if(jogo=="V"):
	   pont=pont+3/100
	elif(jogo=="E"):
	   pont=pont+2/100
	elif(jogo=="D"):
	   pont=pont+1/100
	else:
		pont=pont+0
	jogo=input("jogo:")
	
print(round(pont,2)
-- ERROR:
File "XXXX", line 15
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:31:46) 
-- CODE:
jogo=input("jogo:").upper()
pont=0
while(jogo!="X"):
	if(jogo=="V"):
	   pont=pont+3/100
	elif(jogo=="E"):
	   pont=pont+2/100
	elif(jogo=="D"):
	   pont=pont+1/100
	else:
		pont=pont+0
	jogo=input("jogo:")
	
print(round(pont,2)
-- ERROR:
File "XXXX", line 15
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:31:46) 
-- CODE:
jogo=input("jogo:").upper()
pont=0
while(jogo!="X"):
	if(jogo=="V"):
	   pont=pont+3/100
	elif(jogo=="E"):
	   pont=pont+2/100
	elif(jogo=="D"):
	   pont=pont+1/100
	else:
		pont=pont+0
	jogo=input("jogo:")
	
print(round(pont,2)
-- ERROR:
File "XXXX", line 15
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:32:25) 
-- CODE:
jogo=input("jogo:").upper()
pont=0
while(jogo!="X"):
	if(jogo=="V"):
	   pont=pont+3/100
	elif(jogo=="E"):
	   pont=pont+2/100
	elif(jogo=="D"):
	   pont=pont+1/100
	else:
		pont=pont+0
	jogo=input("jogo:")
	
print(round(pont,2)
-- EXECUTION TIME:
0.134139
-- ERROR:
  File "/home/codebench/codes/1752/3092/main.py", line 15
    
                       ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:32:26) 
-- CODE:
jogo=input("jogo:").upper()
pont=0
while(jogo!="X"):
	if(jogo=="V"):
	   pont=pont+3/100
	elif(jogo=="E"):
	   pont=pont+2/100
	elif(jogo=="D"):
	   pont=pont+1/100
	else:
		pont=pont+0
	jogo=input("jogo:")
	
print(round(pont,2)
-- ERROR:
File "XXXX", line 15
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:32:27) 
-- CODE:
jogo=input("jogo:").upper()
pont=0
while(jogo!="X"):
	if(jogo=="V"):
	   pont=pont+3/100
	elif(jogo=="E"):
	   pont=pont+2/100
	elif(jogo=="D"):
	   pont=pont+1/100
	else:
		pont=pont+0
	jogo=input("jogo:")
	
print(round(pont,2)
-- ERROR:
File "XXXX", line 15
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:32:48) 
-- CODE:
jogo=input("jogo:").upper()
pont=0
while(jogo!="X"):
	if(jogo=="V"):
	   pont=pont+3/100
	elif(jogo=="E"):
	   pont=pont+2/100
	elif(jogo=="D"):
	   pont=pont+1/100
	else:
		pont=pont+0
	
	
print(round(pont,2)
-- ERROR:
File "XXXX", line 15
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:33:23) 
-- CODE:
jogo=input("jogo:").upper()
pont=0
while(jogo!="X"):
	if(jogo=="V"):
	   pont=pont+3/100
	elif(jogo=="E"):
	   pont=pont+2/100
	elif(jogo=="D"):
	   pont=pont+1/100
	else:
		pont=pont+0
	jogo=input("jogo:").upper()
	
print(round(pont,2)
-- ERROR:
File "XXXX", line 15
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:33:24) 
-- CODE:
jogo=input("jogo:").upper()
pont=0
while(jogo!="X"):
	if(jogo=="V"):
	   pont=pont+3/100
	elif(jogo=="E"):
	   pont=pont+2/100
	elif(jogo=="D"):
	   pont=pont+1/100
	else:
		pont=pont+0
	jogo=input("jogo:").upper()
	
print(round(pont,2)
-- ERROR:
File "XXXX", line 15
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:33:25) 
-- CODE:
jogo=input("jogo:").upper()
pont=0
while(jogo!="X"):
	if(jogo=="V"):
	   pont=pont+3/100
	elif(jogo=="E"):
	   pont=pont+2/100
	elif(jogo=="D"):
	   pont=pont+1/100
	else:
		pont=pont+0
	jogo=input("jogo:").upper()
	
print(round(pont,2)
-- ERROR:
File "XXXX", line 15
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:34:32) 
-- CODE:
jogo=input("jogo:").upper()
pont=0
while(jogo=="X"):
	if(jogo=="V"):
	   pont=pont+3/100
	elif(jogo=="E"):
	   pont=pont+2/100
	elif(jogo=="D"):
	   pont=pont+1/100
	else:
		pont=pont+0
	jogo=input("jogo:").upper()
	
print(round(pont,2)
-- ERROR:
File "XXXX", line 15
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:35:56) 
-- CODE:
jogo=input("jogo:").upper()
pont=0
while(jogo!="x"):
	if(jogo=="V"):
	   pont=pont+3/100
	elif(jogo=="E"):
	   pont=pont+2/100
	elif(jogo=="D"):
	   pont=pont+1/100
	else:
		pont=pont+0
	jogo=input("jogo:").upper()
	
print(round(pont,2)
-- ERROR:
File "XXXX", line 15
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:36:16) 
-- CODE:
jogo=input("jogo:").upper()
pont=0
while(jogo!=)x:
	if(jogo=="V"):
	   pont=pont+3/100
	elif(jogo=="E"):
	   pont=pont+2/100
	elif(jogo=="D"):
	   pont=pont+1/100
	else:
		pont=pont+0
	jogo=input("jogo:").upper()
	
print(round(pont,2)
-- ERROR:
File "XXXX", line 3
    while(jogo!=)x:
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:36:31) 
-- CODE:
jogo=input("jogo:").upper()
pont=0
while(jogo!=x):
	if(jogo=="V"):
	   pont=pont+3/100
	elif(jogo=="E"):
	   pont=pont+2/100
	elif(jogo=="D"):
	   pont=pont+1/100
	else:
		pont=pont+0
	jogo=input("jogo:").upper()
	
print(round(pont,2)
-- ERROR:
File "XXXX", line 15
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:37:04) 
-- CODE:
jogo=input("jogo:").upper()
pont=0
while(jogo!="x"):
	if(jogo=="V"):
	   pont=pont+3/100
	elif(jogo=="E"):
	   pont=pont+2/100
	elif(jogo=="D"):
	   pont=pont+1/100
	else:
		pont=pont+0
	jogo=input("jogo:").upper()
	
print(round(pont,2)
-- ERROR:
File "XXXX", line 15
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:37:18) 
-- CODE:
jogo=input("jogo:").upper()
pont=0
while(jogo=!"x"):
	if(jogo=="V"):
	   pont=pont+3/100
	elif(jogo=="E"):
	   pont=pont+2/100
	elif(jogo=="D"):
	   pont=pont+1/100
	else:
		pont=pont+0
	jogo=input("jogo:").upper()
	
print(round(pont,2)
-- ERROR:
File "XXXX", line 3
    while(jogo=!"x"):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:38:03) 
-- CODE:
jogo=input("jogo:").upper()
pont=0
while(jogo!="X"):
	if(jogo=="V"):
	   pont=pont+3/100
	elif(jogo=="E"):
	   pont=pont+2/100
	elif(jogo=="D"):
	   pont=pont+1/100
	else:
		pont=pont+0
	jogo=input("jogo:").upper()
	
print(round(pont,2)
-- ERROR:
File "XXXX", line 15
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:40:07) 
-- CODE:
jogo=input("jogo:").upper()
pont=0
while(jogo!="X"):
	if(jogo=="V"):
	   pont=pont+3/100
	elif(jogo=="E"):
	   pont=pont+2/100
	elif(jogo=="D"):
	   pont=pont+1/100
	else:
		pont=pont+0
	jogo=input("jogo:").upper()
	
print(round(pont,2))
-- EXECUTION TIME:
0.168876
-- TEST CASE 1:
---- input:
v
V
e
E
D
D
a
b
c
d
X
---- correct output:
61.9
---- user output:
0.13
-- TEST CASE 2:
---- input:
V
E
D
C
B
A
X
---- correct output:
66.67
---- user output:
0.06
-- TEST CASE 3:
---- input:
A
A
A
v
v
V
V
X
---- correct output:
100.0
---- user output:
0.12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:40:08) 
-- CODE:
jogo=input("jogo:").upper()
pont=0
while(jogo!="X"):
	if(jogo=="V"):
	   pont=pont+3/100
	elif(jogo=="E"):
	   pont=pont+2/100
	elif(jogo=="D"):
	   pont=pont+1/100
	else:
		pont=pont+0
	jogo=input("jogo:").upper()
	
print(round(pont,2))
-- EXECUTION TIME:
0.186985
-- TEST CASE 1:
---- input:
v
V
e
E
D
D
a
b
c
d
X
---- correct output:
61.9
---- user output:
0.13
-- TEST CASE 2:
---- input:
V
E
D
C
B
A
X
---- correct output:
66.67
---- user output:
0.06
-- TEST CASE 3:
---- input:
A
A
A
v
v
V
V
X
---- correct output:
100.0
---- user output:
0.12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:40:09) 
-- CODE:
jogo=input("jogo:").upper()
pont=0
while(jogo!="X"):
	if(jogo=="V"):
	   pont=pont+3/100
	elif(jogo=="E"):
	   pont=pont+2/100
	elif(jogo=="D"):
	   pont=pont+1/100
	else:
		pont=pont+0
	jogo=input("jogo:").upper()
	
print(round(pont,2))
-- OUTPUT:
0.13
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:41:07) 
-- CODE:
jogo=input("jogo:").upper()
pont=0
while(jogo!="X"):
	if(jogo=="V"):
	   pont=pont+3
	elif(jogo=="E"):
	   pont=pont+2
	elif(jogo=="D"):
	   pont=pont+1
	else:
		pont=pont+0
	jogo=input("jogo:").upper()
	
print(round(pont,2))
-- OUTPUT:
13
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:44:07) 
-- CODE:
jogo=input("jogo:").upper()
pont=0
while(jogo!="X"):
	if(jogo=="V"):
	   pont=pont+3
	elif(jogo=="E"):
	   pont=pont+2
	elif(jogo=="D"):
	   pont=pont+1
	else:
		pont=pont+0
	jogo=input("jogo:").upper()
	
print(round(pont,2))
-- EXECUTION TIME:
0.213102
-- TEST CASE 1:
---- input:
v
V
e
E
D
D
a
b
c
d
X
---- correct output:
61.9
---- user output:
13
-- TEST CASE 2:
---- input:
V
E
D
C
B
A
X
---- correct output:
66.67
---- user output:
6
-- TEST CASE 3:
---- input:
A
A
A
v
v
V
V
X
---- correct output:
100.0
---- user output:
12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:44:08) 
-- CODE:
jogo=input("jogo:").upper()
pont=0
while(jogo!="X"):
	if(jogo=="V"):
	   pont=pont+3
	elif(jogo=="E"):
	   pont=pont+2
	elif(jogo=="D"):
	   pont=pont+1
	else:
		pont=pont+0
	jogo=input("jogo:").upper()
	
print(round(pont,2))
-- EXECUTION TIME:
0.186514
-- TEST CASE 1:
---- input:
v
V
e
E
D
D
a
b
c
d
X
---- correct output:
61.9
---- user output:
13
-- TEST CASE 2:
---- input:
V
E
D
C
B
A
X
---- correct output:
66.67
---- user output:
6
-- TEST CASE 3:
---- input:
A
A
A
v
v
V
V
X
---- correct output:
100.0
---- user output:
12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:44:09) 
-- CODE:
jogo=input("jogo:").upper()
pont=0
while(jogo!="X"):
	if(jogo=="V"):
	   pont=pont+3
	elif(jogo=="E"):
	   pont=pont+2
	elif(jogo=="D"):
	   pont=pont+1
	else:
		pont=pont+0
	jogo=input("jogo:").upper()
	
print(round(pont,2))
-- EXECUTION TIME:
0.162246
-- TEST CASE 1:
---- input:
v
V
e
E
D
D
a
b
c
d
X
---- correct output:
61.9
---- user output:
13
-- TEST CASE 2:
---- input:
V
E
D
C
B
A
X
---- correct output:
66.67
---- user output:
6
-- TEST CASE 3:
---- input:
A
A
A
v
v
V
V
X
---- correct output:
100.0
---- user output:
12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:44:09) 
-- CODE:
jogo=input("jogo:").upper()
pont=0
while(jogo!="X"):
	if(jogo=="V"):
	   pont=pont+3
	elif(jogo=="E"):
	   pont=pont+2
	elif(jogo=="D"):
	   pont=pont+1
	else:
		pont=pont+0
	jogo=input("jogo:").upper()
	
print(round(pont,2))
-- EXECUTION TIME:
0.166701
-- TEST CASE 1:
---- input:
v
V
e
E
D
D
a
b
c
d
X
---- correct output:
61.9
---- user output:
13
-- TEST CASE 2:
---- input:
V
E
D
C
B
A
X
---- correct output:
66.67
---- user output:
6
-- TEST CASE 3:
---- input:
A
A
A
v
v
V
V
X
---- correct output:
100.0
---- user output:
12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:44:10) 
-- CODE:
jogo=input("jogo:").upper()
pont=0
while(jogo!="X"):
	if(jogo=="V"):
	   pont=pont+3
	elif(jogo=="E"):
	   pont=pont+2
	elif(jogo=="D"):
	   pont=pont+1
	else:
		pont=pont+0
	jogo=input("jogo:").upper()
	
print(round(pont,2))
-- EXECUTION TIME:
0.112722
-- TEST CASE 1:
---- input:
v
V
e
E
D
D
a
b
c
d
X
---- correct output:
61.9
---- user output:
13
-- TEST CASE 2:
---- input:
V
E
D
C
B
A
X
---- correct output:
66.67
---- user output:
6
-- TEST CASE 3:
---- input:
A
A
A
v
v
V
V
X
---- correct output:
100.0
---- user output:
12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:44:10) 
-- CODE:
jogo=input("jogo:").upper()
pont=0
while(jogo!="X"):
	if(jogo=="V"):
	   pont=pont+3
	elif(jogo=="E"):
	   pont=pont+2
	elif(jogo=="D"):
	   pont=pont+1
	else:
		pont=pont+0
	jogo=input("jogo:").upper()
	
print(round(pont,2))
-- EXECUTION TIME:
0.200866
-- TEST CASE 1:
---- input:
v
V
e
E
D
D
a
b
c
d
X
---- correct output:
61.9
---- user output:
13
-- TEST CASE 2:
---- input:
V
E
D
C
B
A
X
---- correct output:
66.67
---- user output:
6
-- TEST CASE 3:
---- input:
A
A
A
v
v
V
V
X
---- correct output:
100.0
---- user output:
12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:44:11) 
-- CODE:
jogo=input("jogo:").upper()
pont=0
while(jogo!="X"):
	if(jogo=="V"):
	   pont=pont+3
	elif(jogo=="E"):
	   pont=pont+2
	elif(jogo=="D"):
	   pont=pont+1
	else:
		pont=pont+0
	jogo=input("jogo:").upper()
	
print(round(pont,2))
-- EXECUTION TIME:
0.117898
-- TEST CASE 1:
---- input:
v
V
e
E
D
D
a
b
c
d
X
---- correct output:
61.9
---- user output:
13
-- TEST CASE 2:
---- input:
V
E
D
C
B
A
X
---- correct output:
66.67
---- user output:
6
-- TEST CASE 3:
---- input:
A
A
A
v
v
V
V
X
---- correct output:
100.0
---- user output:
13
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:44:11) 
-- CODE:
jogo=input("jogo:").upper()
pont=0
while(jogo!="X"):
	if(jogo=="V"):
	   pont=pont+3
	elif(jogo=="E"):
	   pont=pont+2
	elif(jogo=="D"):
	   pont=pont+1
	else:
		pont=pont+0
	jogo=input("jogo:").upper()
	
print(round(pont,2))
-- EXECUTION TIME:
0.178213
-- TEST CASE 1:
---- input:
v
V
e
E
D
D
a
b
c
d
X
---- correct output:
61.9
---- user output:
13
-- TEST CASE 2:
---- input:
V
E
D
C
B
A
X
---- correct output:
66.67
---- user output:
6
-- TEST CASE 3:
---- input:
A
A
A
v
v
V
V
X
---- correct output:
100.0
---- user output:
13
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:44:12) 
-- CODE:
jogo=input("jogo:").upper()
pont=0
while(jogo!="X"):
	if(jogo=="V"):
	   pont=pont+3
	elif(jogo=="E"):
	   pont=pont+2
	elif(jogo=="D"):
	   pont=pont+1
	else:
		pont=pont+0
	jogo=input("jogo:").upper()
	
print(round(pont,2))
-- EXECUTION TIME:
0.202408
-- TEST CASE 1:
---- input:
v
V
e
E
D
D
a
b
c
d
X
---- correct output:
61.9
---- user output:
13
-- TEST CASE 2:
---- input:
V
E
D
C
B
A
X
---- correct output:
66.67
---- user output:
6
-- TEST CASE 3:
---- input:
A
A
A
v
v
V
V
X
---- correct output:
100.0
---- user output:
13
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:44:12) 
-- CODE:
jogo=input("jogo:").upper()
pont=0
while(jogo!="X"):
	if(jogo=="V"):
	   pont=pont+3
	elif(jogo=="E"):
	   pont=pont+2
	elif(jogo=="D"):
	   pont=pont+1
	else:
		pont=pont+0
	jogo=input("jogo:").upper()
	
print(round(pont,2))
-- EXECUTION TIME:
0.186307
-- TEST CASE 1:
---- input:
v
V
e
E
D
D
a
b
c
d
X
---- correct output:
61.9
---- user output:
13
-- TEST CASE 2:
---- input:
V
E
D
C
B
A
X
---- correct output:
66.67
---- user output:
6
-- TEST CASE 3:
---- input:
A
A
A
v
v
V
V
X
---- correct output:
100.0
---- user output:
12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:48:54) 
-- CODE:
jogo=input("jogo:").upper()
pont=0
jogos=0
while(jogo!="X"):
	if(jogo=="V"):
	   pont=pont+3
		jogos=pont*100/3
	elif(jogo=="E"):
	   pont=pont+2
		jogos=pont*50/2
	elif(jogo=="D"):
	   pont=pont+1
		jogos=jogos*10/1
	else:
		pont=pont+0
		jogos=jogos+*0
	jogo=input("jogo:").upper()
	
print(round(jogos,2))
-- EXECUTION TIME:
0.207511
-- ERROR:
  File "/home/codebench/codes/1752/3092/main.py", line 7
    jogos=pont*100/3
                   ^
TabError: inconsistent use of tabs and spaces in indentation

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:48:55) 
-- CODE:
jogo=input("jogo:").upper()
pont=0
jogos=0
while(jogo!="X"):
	if(jogo=="V"):
	   pont=pont+3
		jogos=pont*100/3
	elif(jogo=="E"):
	   pont=pont+2
		jogos=pont*50/2
	elif(jogo=="D"):
	   pont=pont+1
		jogos=jogos*10/1
	else:
		pont=pont+0
		jogos=jogos+*0
	jogo=input("jogo:").upper()
	
print(round(jogos,2))
-- EXECUTION TIME:
0.150223
-- ERROR:
  File "/home/codebench/codes/1752/3092/main.py", line 7
    jogos=pont*100/3
                   ^
TabError: inconsistent use of tabs and spaces in indentation

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:48:56) 
-- CODE:
jogo=input("jogo:").upper()
pont=0
jogos=0
while(jogo!="X"):
	if(jogo=="V"):
	   pont=pont+3
		jogos=pont*100/3
	elif(jogo=="E"):
	   pont=pont+2
		jogos=pont*50/2
	elif(jogo=="D"):
	   pont=pont+1
		jogos=jogos*10/1
	else:
		pont=pont+0
		jogos=jogos+*0
	jogo=input("jogo:").upper()
	
print(round(jogos,2))
-- ERROR:
File "XXXX", line 7
    jogos=pont*100/3
                   ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:49:42) 
-- CODE:
jogo=input("jogo:").upper()
pont=0
jogos=0
while(jogo!="X"):
	if(jogo=="V"):
	   pont=pont*3/100
		
	elif(jogo=="E"):
	   pont=pont+2
		jogos=pont*2/100
	elif(jogo=="D"):
	   pont=pont+1
		jogos=jogos*1/100
	else:
		pont=pont+0
		jogos=jogos+*0
	jogo=input("jogo:").upper()
	
print(round(jogos,2))
-- EXECUTION TIME:
0.239305
-- ERROR:
  File "/home/codebench/codes/1752/3092/main.py", line 10
    jogos=pont*2/100
                   ^
TabError: inconsistent use of tabs and spaces in indentation

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:49:43) 
-- CODE:
jogo=input("jogo:").upper()
pont=0
jogos=0
while(jogo!="X"):
	if(jogo=="V"):
	   pont=pont*3/100
		
	elif(jogo=="E"):
	   pont=pont+2
		jogos=pont*2/100
	elif(jogo=="D"):
	   pont=pont+1
		jogos=jogos*1/100
	else:
		pont=pont+0
		jogos=jogos+*0
	jogo=input("jogo:").upper()
	
print(round(jogos,2))
-- ERROR:
File "XXXX", line 10
    jogos=pont*2/100
                   ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:50:13) 
-- CODE:
jogo=input("jogo:").upper()
pont=0
jogos=0
while(jogo!="X"):
	if(jogo=="V"):
	   pont=pont*3/100
		
	elif(jogo=="E"):
	   pont=pont*2/100
		
	elif(jogo=="D"):
	   pont=pont+1
		jogos=jogos*1/100
	else:
		pont=pont+0
		
	jogo=input("jogo:").upper()
	
print(round(pont,2))
-- EXECUTION TIME:
0.138036
-- ERROR:
  File "/home/codebench/codes/1752/3092/main.py", line 13
    jogos=jogos*1/100
                    ^
TabError: inconsistent use of tabs and spaces in indentation

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:50:14) 
-- CODE:
jogo=input("jogo:").upper()
pont=0
jogos=0
while(jogo!="X"):
	if(jogo=="V"):
	   pont=pont*3/100
		
	elif(jogo=="E"):
	   pont=pont*2/100
		
	elif(jogo=="D"):
	   pont=pont+1
		jogos=jogos*1/100
	else:
		pont=pont+0
		
	jogo=input("jogo:").upper()
	
print(round(pont,2))
-- ERROR:
File "XXXX", line 13
    jogos=jogos*1/100
                    ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:50:41) 
-- CODE:
jogo=input("jogo:").upper()
pont=0
while(jogo!="X"):
	if(jogo=="V"):
	   pont=pont*3/100
	elif(jogo=="E"):
	   pont=pont*2/100	
	elif(jogo=="D"):
	   pont=pont+1
	else:
		pont=pont+0
	jogo=input("jogo:").upper()
	
print(round(pont,2))
-- EXECUTION TIME:
0.143697
-- TEST CASE 1:
---- input:
v
V
e
E
D
D
a
b
c
d
X
---- correct output:
61.9
---- user output:
3.0
-- TEST CASE 2:
---- input:
V
E
D
C
B
A
X
---- correct output:
66.67
---- user output:
1.0
-- TEST CASE 3:
---- input:
A
A
A
v
v
V
V
X
---- correct output:
100.0
---- user output:
0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:50:41) 
-- CODE:
jogo=input("jogo:").upper()
pont=0
while(jogo!="X"):
	if(jogo=="V"):
	   pont=pont*3/100
	elif(jogo=="E"):
	   pont=pont*2/100	
	elif(jogo=="D"):
	   pont=pont+1
	else:
		pont=pont+0
	jogo=input("jogo:").upper()
	
print(round(pont,2))
-- OUTPUT:
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:51:18) 
-- CODE:
jogo=input("jogo:").upper()
pont=0
while(jogo!="X"):
	if(jogo=="V"):
	   pont=pont+3/100
	elif(jogo=="E"):
	   pont=pont+2/100	
	elif(jogo=="D"):
	   pont=pont+1
	else:
		pont=pont+0
	jogo=input("jogo:").upper()
	
print(round(pont,2))
-- OUTPUT:
3.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:54:35) 
-- CODE:
jogo=input("jogo:").upper()
pont=0
porc=0
while(jogo!="X"):
	if(jogo=="V"):
	   pont=pont+3
	elif(jogo=="E"):
	   pont=pont+2
	elif(jogo=="D"):
	   pont=pont+1
	else:
		pont=pont+0
	jogo=input("jogo:").upper()
	
print(round(pont,2))
-- OUTPUT:
13
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:56:30) 
-- CODE:
jogo=input("jogo:").upper()
pont=0
porc=0
while(jogo!="X"):
	if(jogo=="V"):
	   pont=pont+3
		porc=porc+100
	elif(jogo=="E"):
	   pont=pont+2
		porc=porc+50
	elif(jogo=="D"):
	   pont=pont+1
		porc=porc+10
	else:
		pont=pont+0
	jogo=input("jogo:").upper()
	
print(round(porc,2))
-- ERROR:
File "XXXX", line 7
    porc=porc+100
                ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:57:45) 
-- CODE:
jogo=input("jogo:").upper()
pont=0
porc=0
while(jogo!="X"):
	if(jogo=="V"):
	   pont=pont+3/0.1
	elif(jogo=="E"):
	   pont=pont+2/0.05
	elif(jogo=="D"):
	   pont=pont+1/0.01
	else:
		pont=pont+0
	jogo=input("jogo:").upper()
	
print(round(porc,2))
-- EXECUTION TIME:
0.204766
-- TEST CASE 1:
---- input:
v
V
e
E
D
D
a
b
c
d
X
---- correct output:
61.9
---- user output:
0
-- TEST CASE 2:
---- input:
V
E
D
C
B
A
X
---- correct output:
66.67
---- user output:
0
-- TEST CASE 3:
---- input:
A
A
A
v
v
V
V
X
---- correct output:
100.0
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:57:46) 
-- CODE:
jogo=input("jogo:").upper()
pont=0
porc=0
while(jogo!="X"):
	if(jogo=="V"):
	   pont=pont+3/0.1
	elif(jogo=="E"):
	   pont=pont+2/0.05
	elif(jogo=="D"):
	   pont=pont+1/0.01
	else:
		pont=pont+0
	jogo=input("jogo:").upper()
	
print(round(porc,2))
-- EXECUTION TIME:
0.138758
-- TEST CASE 1:
---- input:
v
V
e
E
D
D
a
b
c
d
X
---- correct output:
61.9
---- user output:
0
-- TEST CASE 2:
---- input:
V
E
D
C
B
A
X
---- correct output:
66.67
---- user output:
0
-- TEST CASE 3:
---- input:
A
A
A
v
v
V
V
X
---- correct output:
100.0
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:57:47) 
-- CODE:
jogo=input("jogo:").upper()
pont=0
porc=0
while(jogo!="X"):
	if(jogo=="V"):
	   pont=pont+3/0.1
	elif(jogo=="E"):
	   pont=pont+2/0.05
	elif(jogo=="D"):
	   pont=pont+1/0.01
	else:
		pont=pont+0
	jogo=input("jogo:").upper()
	
print(round(porc,2))
-- EXECUTION TIME:
0.17432
-- TEST CASE 1:
---- input:
v
V
e
E
D
D
a
b
c
d
X
---- correct output:
61.9
---- user output:
0
-- TEST CASE 2:
---- input:
V
E
D
C
B
A
X
---- correct output:
66.67
---- user output:
0
-- TEST CASE 3:
---- input:
A
A
A
v
v
V
V
X
---- correct output:
100.0
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:57:47) 
-- CODE:
jogo=input("jogo:").upper()
pont=0
porc=0
while(jogo!="X"):
	if(jogo=="V"):
	   pont=pont+3/0.1
	elif(jogo=="E"):
	   pont=pont+2/0.05
	elif(jogo=="D"):
	   pont=pont+1/0.01
	else:
		pont=pont+0
	jogo=input("jogo:").upper()
	
print(round(porc,2))
-- EXECUTION TIME:
0.23427
-- TEST CASE 1:
---- input:
v
V
e
E
D
D
a
b
c
d
X
---- correct output:
61.9
---- user output:
0
-- TEST CASE 2:
---- input:
V
E
D
C
B
A
X
---- correct output:
66.67
---- user output:
0
-- TEST CASE 3:
---- input:
A
A
A
v
v
V
V
X
---- correct output:
100.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:57:48) 
-- CODE:
jogo=input("jogo:").upper()
pont=0
porc=0
while(jogo!="X"):
	if(jogo=="V"):
	   pont=pont+3/0.1
	elif(jogo=="E"):
	   pont=pont+2/0.05
	elif(jogo=="D"):
	   pont=pont+1/0.01
	else:
		pont=pont+0
	jogo=input("jogo:").upper()
	
print(round(porc,2))
-- EXECUTION TIME:
0.262149
-- TEST CASE 1:
---- input:
v
V
e
E
D
D
a
b
c
d
X
---- correct output:
61.9
---- user output:
0
-- TEST CASE 2:
---- input:
V
E
D
C
B
A
X
---- correct output:
66.67
---- user output:
0
-- TEST CASE 3:
---- input:
A
A
A
v
v
V
V
X
---- correct output:
100.0
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:57:48) 
-- CODE:
jogo=input("jogo:").upper()
pont=0
porc=0
while(jogo!="X"):
	if(jogo=="V"):
	   pont=pont+3/0.1
	elif(jogo=="E"):
	   pont=pont+2/0.05
	elif(jogo=="D"):
	   pont=pont+1/0.01
	else:
		pont=pont+0
	jogo=input("jogo:").upper()
	
print(round(porc,2))
-- EXECUTION TIME:
0.46546
-- TEST CASE 1:
---- input:
v
V
e
E
D
D
a
b
c
d
X
---- correct output:
61.9
---- user output:
0
-- TEST CASE 2:
---- input:
V
E
D
C
B
A
X
---- correct output:
66.67
---- user output:
0
-- TEST CASE 3:
---- input:
A
A
A
v
v
V
V
X
---- correct output:
100.0
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:57:48) 
-- CODE:
jogo=input("jogo:").upper()
pont=0
porc=0
while(jogo!="X"):
	if(jogo=="V"):
	   pont=pont+3/0.1
	elif(jogo=="E"):
	   pont=pont+2/0.05
	elif(jogo=="D"):
	   pont=pont+1/0.01
	else:
		pont=pont+0
	jogo=input("jogo:").upper()
	
print(round(porc,2))
-- EXECUTION TIME:
0.738963
-- TEST CASE 1:
---- input:
v
V
e
E
D
D
a
b
c
d
X
---- correct output:
61.9
---- user output:
0
-- TEST CASE 2:
---- input:
V
E
D
C
B
A
X
---- correct output:
66.67
---- user output:
0
-- TEST CASE 3:
---- input:
A
A
A
v
v
V
V
X
---- correct output:
100.0
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:57:48) 
-- CODE:
jogo=input("jogo:").upper()
pont=0
porc=0
while(jogo!="X"):
	if(jogo=="V"):
	   pont=pont+3/0.1
	elif(jogo=="E"):
	   pont=pont+2/0.05
	elif(jogo=="D"):
	   pont=pont+1/0.01
	else:
		pont=pont+0
	jogo=input("jogo:").upper()
	
print(round(porc,2))
-- EXECUTION TIME:
0.640598
-- TEST CASE 1:
---- input:
v
V
e
E
D
D
a
b
c
d
X
---- correct output:
61.9
---- user output:
0
-- TEST CASE 2:
---- input:
V
E
D
C
B
A
X
---- correct output:
66.67
---- user output:
0
-- TEST CASE 3:
---- input:
A
A
A
v
v
V
V
X
---- correct output:
100.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:57:49) 
-- CODE:
jogo=input("jogo:").upper()
pont=0
porc=0
while(jogo!="X"):
	if(jogo=="V"):
	   pont=pont+3/0.1
	elif(jogo=="E"):
	   pont=pont+2/0.05
	elif(jogo=="D"):
	   pont=pont+1/0.01
	else:
		pont=pont+0
	jogo=input("jogo:").upper()
	
print(round(porc,2))
-- EXECUTION TIME:
0.645989
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1752/3092/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:57:49) 
-- CODE:
jogo=input("jogo:").upper()
pont=0
porc=0
while(jogo!="X"):
	if(jogo=="V"):
	   pont=pont+3/0.1
	elif(jogo=="E"):
	   pont=pont+2/0.05
	elif(jogo=="D"):
	   pont=pont+1/0.01
	else:
		pont=pont+0
	jogo=input("jogo:").upper()
	
print(round(porc,2))
-- EXECUTION TIME:
0.5725
-- TEST CASE 1:
---- input:
v
V
e
E
D
D
a
b
c
d
X
---- correct output:
61.9
---- user output:
0
-- TEST CASE 2:
---- input:
V
E
D
C
B
A
X
---- correct output:
66.67
---- user output:
0
-- TEST CASE 3:
---- input:
A
A
A
v
v
V
V
X
---- correct output:
100.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:57:49) 
-- CODE:
jogo=input("jogo:").upper()
pont=0
porc=0
while(jogo!="X"):
	if(jogo=="V"):
	   pont=pont+3/0.1
	elif(jogo=="E"):
	   pont=pont+2/0.05
	elif(jogo=="D"):
	   pont=pont+1/0.01
	else:
		pont=pont+0
	jogo=input("jogo:").upper()
	
print(round(porc,2))
-- EXECUTION TIME:
0.376
-- TEST CASE 1:
---- input:
v
V
e
E
D
D
a
b
c
d
X
---- correct output:
61.9
---- user output:
0
-- TEST CASE 2:
---- input:
V
E
D
C
B
A
X
---- correct output:
66.67
---- user output:

-- TEST CASE 3:
---- input:
A
A
A
v
v
V
V
X
---- correct output:
100.0
---- user output:
jogo:jogo:jogo:jogo:jogo:jogo:jogo:jogo:0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
